--- a/01-2columnas_iguales_css_grid/index.html
+++ b/01-2columnas_iguales_css_grid/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="contenedor">
+    <div class="contenedor dos-columnas">
         <article class="entrada-blog">
             <h1>Titulo Entrada Blog</h1>
             <img src="img/imagen1.jpg">
@@ -23,10 +23,9 @@
             <h1>Titulo Entrada Blog</h1>
             <img src="img/imagen2.jpg">
             <p>Maecenas maximus urna vitae nisl semper, id volutpat ipsum scelerisque. Aenean nec ipsum finibus, eleifend dolor at, venenatis risus. Quisque varius orci et augue scelerisque luctus.</p>
-            <a href="#">Leer más agregador</a>
+            <a href="#">Leer más</a>
         </article>
     </div>
 
 </body>
-
 </html>
